# fastapi

./: Dockerfile  Jenkinsfile  README.md  database.py  docker-compose.yml  machine_learning.py  main.py  pyproject.toml  requeriments.txt  routes.py  tests.py
data/: patients.csv
kubernetes/measurements/: deployment.yaml  service.yaml
kubernetes/patients/: deployment.yaml  service.yaml
measurements/: models.py  schemas.py  services.py
patients/: models.py  schemas.py  services.py
tests/: tests.py
