[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["samuel diaz <samuelcddo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.17"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
alembic = "^1.11.1"
pandas = "^2.0.3"
sklearn = "^0.0.post5"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
